causal processing as a stream